[package]
name = "luminos-support"
version = "0.1.0"
edition = "2024"
authors = ["joseph@raubstudios.com"]
description = "luminos Support"
repository = "https://github.com/RaubJo/luminos-support"
license = "MIT"

[dependencies]
serde_json = "1.0.140"
serde = "1.0.219"
luminos-contracts ={ path = "../Contracts", version = "0.1.0"}
luminos-container ={ path = "../Container", version = "0.1.0"}

[lints.rust]
dead_code = "allow"
unused = "allow"
